--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="sound-picker">
         <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4"><img src="./svg/rain.svg" alt="rain sound"></button>
         <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/beach.svg" alt="beach sound"></button>
-        <button data-sound="./sounds/spring-forest-birds-sounds.mp3" data-video="./video/forest.mp4"><img src="./svg/bird.png" alt="bird sounds"></button>
+        <button data-sound="./sounds/spring-forest-birds-sounds.mp3" data-video="./video/forestt.mp4"><img src="./svg/bird.png" alt="bird sounds"></button>
 
       </div>
 
